Bug fix: index.css spacing error on laptop

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -38,7 +38,7 @@
 }
 
 #home-title-row {
-    height: 40%;
+    height: 35%;
 
     margin-top: 12.5vh;
 
@@ -137,8 +137,12 @@
 	    height: 70vh;
     }
 
+    #home-title {
+        width: 60%;
+    }
+
     #home-title-row {
-        margin-top: 10vh;
+        margin-top: 7.5vh;
     }
 
     #home-start-row {
@@ -149,9 +153,17 @@
         border: solid 8px black;
         font-size: 2.5rem;
     }
+
+    #home-cta-start:hover, #home-cta-tutorial:hover {
+        border-width: 10px;
+    }
 }
 
 @media (min-width: 1200px) {
+    #home-title {
+        width: 55%;
+    }
+    
     #home-title-row {
         margin-top: 5vh;
     }
@@ -164,11 +176,19 @@
         border: solid 10px black;
         font-size: 3rem;
     }
+
+    #home-cta-start:hover, #home-cta-tutorial:hover {
+        border-width: 12px;
+    }
 }
 
 @media (min-width: 1350px) {
     #home-cta-start, #home-cta-tutorial {
         border: solid 12px black;
         font-size: 4rem;
+    }
+
+    #home-cta-start:hover, #home-cta-tutorial:hover {
+        border-width: 14px;
     }
 }
